--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,49 +1,64 @@
-.top_flex_container {
+.main {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+}
+
+.topContainer {
+  background-image: url("components/resources/BG_IMG.png");
+  background-repeat: no-repeat;
+  height: 800px;
+  max-width: 1800px;
+  width: 100%;
+  justify-content: center;
+}
+.imgContainer {
+  display: flex;
+  flex-direction: column;
+  top: 50%;
+  width: 100%;
+  position: absolute;
+}
+.imgConent {
+  display: flex;
   flex-direction: row;
-  max-width: 1500px;
-  width: 100%;
-  margin: auto;
-}
-.top_flex_container .top_flex_left {
+  justify-content: center;
   text-align: center;
-  margin-top: 3%;
-  max-width: 750px;
-  max-height: 1000px;
-  height: 100%;
-  width: 100%;
 }
-.top_flex_container .top_flex_right {
-  max-width: 750px;
-  max-height: 1000px;
+.moto {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
-.top_flex_container .top_flex_right img {
-  width: 100%;
-  height: 100%;
-}
-.top_flex_container .top_flex_left .moto1 {
+.moto1 {
   font-size: 44px;
   font-weight: 1300;
 }
-.top_flex_container .top_flex_left .moto2 {
+.moto2 {
   font-size: 44px;
   font-weight: 500;
 }
-.top_flex_container .top_flex_left p {
-  margin-top: 15%;
-  font-size: 20px;
+
+.buttonsContainer {
+  display: flex;
+  flex-direction: row;
 }
-.top_flex_container .top_flex_left h1 {
-  display: inline;
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
-.top_flex_container .top_flex_left ul {
-  margin-top: 15%;
+.buttons ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
-.top_flex_container .top_flex_left ul li {
-  display: inline-block;
+.buttons li {
+  list-style: none;
 }
-.top_flex_container .top_flex_left ul li button {
+
+.buttons button {
   border: none;
   background-color: rgb(0, 0, 48);
   color: white;
@@ -54,24 +69,16 @@
   margin: 10px;
   transition-duration: 0.4s;
 }
-.top_flex_container .top_flex_left ul li button:active {
+
+.buttons button:active {
   background-color: rgb(53, 53, 110);
 }
-
-.top_flex_container .top_flex_left ul li button:hover {
+.buttons button:hover {
   color: rgb(109, 109, 109);
   font-style: italic;
 }
 
-.top_flex_container .top_flex_left .bottom_expression {
-  margin-top: 15%;
-  font-size: 34px;
-  font-weight: 800;
-}
 
-.top_flex_container .top_flex_right img {
-  max-height: 600px;
-}
 .content {
   display: flex;
   flex-direction: column;
