--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -8,15 +8,18 @@
 .topContainer {
   background-image: url("components/resources/BG_IMG.png");
   background-repeat: no-repeat;
-  height: 800px;
+  height: 400px;
   max-width: 1800px;
   width: 100%;
   justify-content: center;
+  background-size: cover;
+  background-position-y: bottom;
 }
+
 .imgContainer {
   display: flex;
   flex-direction: column;
-  top: 50%;
+  top: 40%;
   width: 100%;
   position: absolute;
 }
@@ -25,6 +28,7 @@
   flex-direction: row;
   justify-content: center;
   text-align: center;
+  
 }
 .moto {
   display: flex;
@@ -39,12 +43,29 @@
   font-size: 44px;
   font-weight: 500;
 }
+.moto_p{
+  display: flex;
+  justify-content: center;
+  font-size: 25px;
+}
+
+.imgText {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+h1.expression {
+  margin-top: 3%;
+  margin-bottom: 1%;
+}
 
 .buttonsContainer {
   display: flex;
   flex-direction: row;
 }
 .buttons {
+  padding: 5%;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -56,6 +77,8 @@
 }
 .buttons li {
   list-style: none;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 .buttons button {
@@ -78,7 +101,6 @@
   font-style: italic;
 }
 
-
 .content {
   display: flex;
   flex-direction: column;
@@ -86,7 +108,7 @@
   align-items: center;
   margin: auto;
   text-align: center;
-  margin-top: 100px;
+  margin-top: 2%;
 }
 .item {
   box-sizing: border-box;
